# dpp-msbayes

./: .gitmodules  CHANGES.txt  CMakeLists.txt  INSTALL  INSTALL.md  Makefile.am  Makefile.in  README  README.md  VERSION  aclocal.m4  build.sh  configure  configure.ac  msbayes.spec
dev-tools/: build-abcestimator.sh  build-gsl-linux.sh  build-gsl-mac-universal.sh
documents/: ChangeLog  SampleSize_MuModel_Vector  batch.masterIn  clandestina.fasta  clandestina.nex  d-opt.txt  erosa.fasta  erosa.nex  kieneri.fasta  kieneri.nex  lamarckii.fasta  lamarckii.nex  punctata.fasta  punctata.nex  seqConverter.pl  stolida.fasta  stolida.nex
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.bak  Makefile.in  Prior_SumStat_Outfile  QHarbpop-getpars.c  QHarbpop-streec.c  QHsubs.c  QHsubs.h  acceptRej.pl  acceptRej.r  acceptRej_flex.pl  calmod.r  convertIM.pl  dataSummary.pl  dpp-msbayes.pl  dpp_msbayes_config.h.in  hashtab.c  hashtab.h  initvars.c  loc2plot.r  make_pd2005.r  msCombModels.pl  msQHarbpop.c  msQHarbpop.h  msStatsDQH.c  msbayes.pl  msbayes_mod.pl  msprior.c  msprior.h  msprior_mod.c  msprior_mod.h  obsSumStats.pl  rand2new.c  regress_cli.r  regress_short.r  rejectinC.c  seedms  (+8 more)
src/hashtab/: CMakeLists.txt  main.c
src/old-model/: CMakeLists.txt  Makefile.am  Makefile.in  msbayes.pl  msprior.c  msprior.h  setup.c
